--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/edit_name"
@@ -15,6 +15,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/edit_login"
         android:layout_width="320dp"
@@ -24,18 +25,18 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_name" />
+
     <EditText
         android:id="@+id/edit_description"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="write description here"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_login"
         android:inputType="textMultiLine"
         android:lines="5"
-        />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_login" />
 
     <EditText
         android:id="@+id/edit_event_start"
@@ -46,21 +47,32 @@
         android:hint="start event"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_description" />
+
     <EditText
         android:id="@+id/edit_event_end"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="end event"
+        app:layout_constraintLeft_toRightOf="@id/edit_event_start"
+        app:layout_constraintTop_toBottomOf="@id/edit_description" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/id_recycler_view_tags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
         app:layout_constraintTop_toBottomOf="@id/edit_description"
-        app:layout_constraintLeft_toRightOf="@id/edit_event_start" />
+        />
 
     <Button
         android:id="@+id/add_new_but"
         android:layout_width="match_parent"
         android:layout_height="46dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="160dp"
+        android:background="@color/colorPrimary"
         android:text="save"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_description" />
+
 </android.support.constraint.ConstraintLayout>
