--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -7,7 +7,7 @@
     >
     <TextView android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:id="@+id/title"
+        android:id="@+id/item_text"
         android:textSize="16dp"
         android:textColor="@color/colorAccent"
         />
