--- a/app/src/main/res/layout/content_all_events.xml
+++ b/app/src/main/res/layout/content_all_events.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".features.AllEvents.presentation.AllEventsActivity"
+    tools:context=".features.Events.list.presentation.AllEventsActivity"
     tools:showIn="@layout/app_bar_all_events">
 
 
