--- a/app/src/main/res/layout/app_bar_all_events.xml
+++ b/app/src/main/res/layout/app_bar_all_events.xml
@@ -9,14 +9,16 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:orientation="horizontal"
+        >
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.v7.widget.SearchView
+            android:id="@+id/serch_view_app"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            />
+
 
     </android.support.design.widget.AppBarLayout>
 
