--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <EditText
-        android:id="@+id/edit_login"
+        android:id="@+id/edit_signin_login"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:hint="login"
@@ -15,7 +15,7 @@
         app:layout_constraintVertical_bias="0.369" />
 
     <EditText
-        android:id="@+id/edit_password"
+        android:id="@+id/edit_signin_password"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toBottomOf="@id/edit_login" />
 
     <ImageView
-        android:id="@+id/aut_img"
+        android:id="@+id/aut_logo"
         android:layout_width="268dp"
         android:layout_height="126dp"
         android:layout_marginBottom="16dp"
@@ -40,7 +40,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
-        android:text="Sign up"
+        android:text="Dont't have an account yet?"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
