--- a/app/src/main/res/layout/activity_searching.xml
+++ b/app/src/main/res/layout/activity_searching.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="10"
-        android:hint="Seacrh" />
+        android:hint="Seacrh"
+        />
     <Button android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
