--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -6,72 +6,89 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/edit_name"
-        android:layout_width="0dp"
+        android:hint="event name"
+        android:id="@+id/adding_event_name"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        app:layout_constraintDimensionRatio="64:9"
-        android:hint="name"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="76dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-        android:id="@+id/edit_description"
-        android:layout_width="0dp"
+    <EditText
+        android:hint="what's your name"
+        android:id="@+id/adding_host_name"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="write description here"
-        android:inputType="textMultiLine"
-        android:lines="3"
-        app:layout_constraintDimensionRatio="33:9"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_login" />
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/adding_event_name"
+        />
+
+    <EditText
+        android:hint="descript your event"
+        android:id="@+id/adding_event_discription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/adding_host_name"
+        />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="56dp"
         android:orientation="horizontal"
-        app:layout_constraintDimensionRatio="64:9"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_description">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/adding_event_discription">
 
         <EditText
-            android:id="@+id/edit_event_start"
+            android:id="@+id/start_event_date"
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:hint="start" />
+            android:layout_weight="1"
+            android:hint="start time" />
 
         <EditText
-            android:id="@+id/edit_event_end"
+            android:id="@+id/end_event_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="end event"
             android:layout_weight="1"
-            />
+            android:hint="end time" />
     </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/id_recycler_view_tags"
+        android:id="@+id/recycler_view_tags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        app:layout_constraintTop_toBottomOf="@id/edit_description"
-        />
-
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/adding_event_discription"
+       />
     <Button
-        android:id="@+id/add_new_but"
-        android:layout_width="0dp"
+        android:id="@+id/add_new_event_but"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:background="@color/colorPrimary"
-        android:text="save"
-        app:layout_constraintDimensionRatio="61:9"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_description"
-
-        />
-
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="add event"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 </android.support.constraint.ConstraintLayout>
