--- a/app/src/main/res/layout/app_bar_all_events.xml
+++ b/app/src/main/res/layout/app_bar_all_events.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.event.list.presentation.AllEventsActivity">
+    tools:context=".features.event.list.presentation.EventsListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
