--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -57,6 +57,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:maxLines="1"
                 android:text="shortDescription"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
