--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -4,6 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_marginLeft="3dp"
+    android:layout_marginTop="1dp"
+    android:layout_marginBottom="1dp"
     >
     <TextView android:layout_height="wrap_content"
         android:layout_width="wrap_content"
