FullEventActivity done (need to be redesigned)

--- a/app/src/main/res/layout/activity_full_description_event.xml
+++ b/app/src/main/res/layout/activity_full_description_event.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".features.event.full.FullDescriptionEventActivity">
+    tools:context=".features.event.full.presentation.FullEventActivity">
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
