--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#80fb90</color>
-    <color name="colorPrimaryDark">#00f73e</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ff6e40</color>
+    <color name="colorPrimaryDark">#c53d13</color>
+    <color name="colorAccent">#ffb74d</color>
 </resources>
