--- a/app/src/main/res/layout/app_bar_all_events.xml
+++ b/app/src/main/res/layout/app_bar_all_events.xml
@@ -16,16 +16,16 @@
             android:layout_width="wrap_content"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:layout_gravity="right"
-            >
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+            <!--android:layout_gravity="right"-->
+
 
 
             <android.support.v7.widget.SearchView
                 android:id="@+id/search_view_app"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center" />
+                android:gravity="right" />
         </android.support.v7.widget.Toolbar>
 
 
@@ -45,5 +45,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/ic_create_event" />
 </android.support.design.widget.CoordinatorLayout>
