progressBar added in FullEventActivity

--- a/app/src/main/res/layout/app_bar_all_events.xml
+++ b/app/src/main/res/layout/app_bar_all_events.xml
@@ -19,19 +19,12 @@
             app:popupTheme="@style/AppTheme.PopupOverlay">
             <!--android:layout_gravity="right"-->
 
-
-
-            <android.support.v7.widget.SearchView
-                android:id="@+id/search_view_app"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right" />
         </android.support.v7.widget.Toolbar>
 
 
         <SearchView android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_gravity="right"
+                    android:layout_gravity="end"
 
             />
         </android.support.design.widget.AppBarLayout>
